Refactor authentication, email service and production configuration