@@ -14,10 +14,27 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
 
 import com.assignpro.backend.security.JwtAuthenticationFilter;
 
+import java.util.Arrays;
+import java.util.List;
+
+/**
+ * SecurityConfig
+ *
+ * Public endpoints (no JWT required):
+ * POST /api/auth/login
+ * POST /api/auth/register
+ * GET /api/auth/verify
+ * GET /
+ *
+ * All other endpoints require a valid JWT Bearer token.
+ *
+ * CORS: allows GitHub Pages, Render, and localhost for development.
+ * JWT: stateless — no sessions, no cookies.
+ * Password: BCrypt.
+ */
 @Configuration
 @EnableMethodSecurity
 public class SecurityConfig {
@@ -36,7 +53,6 @@ public class SecurityConfig {
     @Bean
     public AuthenticationManager authenticationManager(
             AuthenticationConfiguration configuration) throws Exception {
-
         return configuration.getAuthenticationManager();
     }
 
@@ -45,33 +61,40 @@ public class SecurityConfig {
 
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // Disable CSRF for REST API
+                // Disable CSRF — REST API with JWT, no cookies
                 .csrf(csrf -> csrf.disable())
 
-                // JWT based authentication
-                .sessionManagement(session -> session.sessionCreationPolicy(
-                        SessionCreationPolicy.STATELESS))
+                // Stateless JWT authentication — no sessions
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
                 .authorizeHttpRequests(auth -> auth
 
-                        // Public endpoints
+                        // ── Public endpoints (no JWT needed) ──
                         .requestMatchers(
                                 "/",
-                                "/api/auth/**",
+                                "/api/auth/login",
+                                "/api/auth/register",
+                                "/api/auth/verify",
+                                "/api/auth/forgot-password",
+                                "/api/auth/reset-password",
+                                "/api/auth/test",
                                 "/error")
                         .permitAll()
+
+                        // ── CORS preflight ──
                         .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // Swagger (if added later)
+                        // ── Swagger (if added later) ──
                         .requestMatchers(
                                 "/swagger-ui/**",
                                 "/v3/api-docs/**")
                         .permitAll()
 
-                        // All other APIs require JWT
+                        // ── All other APIs require JWT ──
                         .anyRequest().authenticated())
 
-                // JWT filter
+                // JWT filter runs before Spring Security's username/password filter
                 .addFilterBefore(
                         jwtAuthenticationFilter,
                         UsernamePasswordAuthenticationFilter.class);
@@ -82,11 +105,29 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Set allowed origins to wildcard or specific frontend URL (GitHub pages)
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+
+        // Allow GitHub Pages, Render, and local development
+        configuration.setAllowedOriginPatterns(List.of(
+                "https://*.github.io", // GitHub Pages (all repos)
+                "https://assignpro-backend.onrender.com",
+                "http://localhost:*", // Local Flutter development
+                "http://127.0.0.1:*" // Local Flutter development
+        ));
+
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "Origin"));
+
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(false);
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
